force-app/main/default/objects/OAuth_JWT_Client_Authentication__mdt/fields/Additional_Token_Endpoint_Headers__c.field-meta.xml
<CustomField>
    <fullName>Additional_Token_Endpoint_Headers__c</fullName>
    <inlineHelpText>Addtional headers to add to the token endpoint. Each header should go on its own line and be separated with a colon. I.E. &quot;apiKey : value&quot;</inlineHelpText>
    <label>Additional Token Endpoint Headers</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>