force-app/main/default/objects/OAuth_JWT_Client_Authentication__mdt/fields/Additional_Token_Endpoint_Parameters__c.field-meta.xml
<CustomField>
    <fullName>Additional_Token_Endpoint_Parameters__c</fullName>
    <inlineHelpText>Addtional params to add to the token endpoint in the POST body.
Each value pair needs to be comma separated and and split by a colon. I.E. &quot;tenant : ab-cd-ef, client_id : qr-st-uv&quot;</inlineHelpText>
    <label>Additional Token Endpoint Parameters</label>
    <length>25000</length>
    <type>LongTextArea</type>
</CustomField>