force-app/main/default/objects/OAuth_JWT_Client_Authentication__mdt/fields/Enable_Error_Logging__c.field-meta.xml
<CustomField>
    <fullName>Enable_Error_Logging__c</fullName>
    <defaultValue>true</defaultValue>
    <inlineHelpText>This option requires the &quot;Lightweight - Auth Provider Util v2&quot; (04t4K000002JuyzQAC) package to be installed.</inlineHelpText>
    <label>Enable Error Logging</label>
    <type>Checkbox</type>
</CustomField>