force-app/main/default/objects/OAuth_JWT_Client_Authentication__mdt/fields/Grant_Type__c.field-meta.xml
<CustomField>
    <fullName>Grant_Type__c</fullName>
    <defaultValue>&apos;client_credentials&apos;</defaultValue>
    <inlineHelpText>The value for the &quot;grant_type&quot; parameter in the token request body. I.E. client_credentials</inlineHelpText>
    <label>Grant Type</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>