force-app/main/default/objects/OAuth_JWT_Client_Authentication__mdt/fields/JWT_Audience__c.field-meta.xml
<CustomField>
    <fullName>JWT_Audience__c</fullName>
    <label>JWT Audience</label>
    <length>255</length>
    <type>Text</type>
</CustomField>