force-app/main/default/objects/OAuth_JWT_Client_Authentication__mdt/fields/JWT_Issuer__c.field-meta.xml
<CustomField>
    <fullName>JWT_Issuer__c</fullName>
    <label>JWT Issuer</label>
    <length>255</length>
    <type>Text</type>
</CustomField>