force-app/main/default/objects/OAuth_JWT_Client_Authentication__mdt/fields/JWT_Kid__c.field-meta.xml
<CustomField>
    <fullName>JWT_Kid__c</fullName>
    <inlineHelpText>Optional Key Id for the JWT</inlineHelpText>
    <label>JWT Kid</label>
    <length>255</length>
    <type>Text</type>
</CustomField>