force-app/main/default/objects/OAuth_JWT_Client_Authentication__mdt/fields/JWT_Subject__c.field-meta.xml
<CustomField>
    <fullName>JWT_Subject__c</fullName>
    <label>JWT Subject</label>
    <length>255</length>
    <type>Text</type>
</CustomField>