force-app/main/default/objects/OAuth_JWT_Client_Authentication__mdt/fields/JWT_Type__c.field-meta.xml
<CustomField>
    <fullName>JWT_Type__c</fullName>
    <defaultValue>&apos;JWT&apos;</defaultValue>
    <description>The typ parameter in the JWT, this almost always  defaults to JWT</description>
    <label>JWT Type</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>