force-app/main/default/objects/OAuth_JWT_Client_Authentication__mdt/fields/Per_User_Login_Logging_Enabled__c.field-meta.xml
<CustomField>
    <fullName>Per_User_Login_Logging_Enabled__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Enable this setting to enable logging on how often a token has been requested by a specific user</inlineHelpText>
    <label>Per User Login Logging Enabled</label>
    <type>Checkbox</type>
</CustomField>