force-app/main/default/objects/OAuth_JWT_Client_Authentication__mdt/fields/Per_User_Mode__c.field-meta.xml
<CustomField>
    <fullName>Per_User_Mode__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>If per user mode is enabled a mapping needs to exist where each User Id is mapped to the external identifier. Use the &quot;Auth Provider Util&quot; App to create these mappings. If this is switched on the JWT Subject field will be populated based on the user mapping.</inlineHelpText>
    <label>Per User Mode</label>
    <type>Checkbox</type>
</CustomField>