force-app/main/default/objects/OAuth_JWT_Client_Authentication__mdt/validationRules/Auth_Pr_Name_Needs_To_Match_URL_Suffix.validationRule-meta.xml
<ValidationRule>
    <fullName>Auth_Pr_Name_Needs_To_Match_URL_Suffix</fullName>
    <active>true</active>
    <description>The &quot;Auth Provider Name&quot; value needs to match the record &quot;URL Suffix&quot; value</description>
    <errorConditionFormula>NOT(Auth_Provider_Name__c == DeveloperName)</errorConditionFormula>
    <errorMessage>The &quot;Auth Provider Name&quot; value needs to match the record &quot;URL Suffix&quot; value</errorMessage>
</ValidationRule>